Add QingStor Storage Driver.
Signed-off-by: Fan, Shang Xiang <sxfan@alauda.io>

--- a/vendor.conf
+++ b/vendor.conf
@@ -48,3 +48,5 @@ gopkg.in/yaml.v2 v2.2.1
 rsc.io/letsencrypt e770c10b0f1a64775ae91d240407ce00d1a5bdeb https://github.com/dmcgowan/letsencrypt.git
 github.com/opencontainers/go-digest a6d0ee40d4207ea02364bd3b9e8e77b9159ba1eb
 github.com/opencontainers/image-spec ab7389ef9f50030c9b245bc16b981c7ddf192882
+github.com/yunify/qingstor-sdk-go e0f4ce9b4495aa46bba366b773cf5a9998e06e66
+github.com/pengsrc/go-shared 1ef04317652833067e47e2ee9815f1f254a7a1da
