--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -35,7 +35,7 @@
 
 [[constraint]]
   name = "github.com/bshuster-repo/logrus-logstash-hook"
-  version = "0.4.0"
+  version = ">=0.4.0, < 0.5.0"
 
 [[constraint]]
   name = "github.com/bugsnag/bugsnag-go"
