--- a/cmd/registry/config-dev.yml
+++ b/cmd/registry/config-dev.yml
@@ -47,6 +47,8 @@ redis:
   readtimeout: 10ms
   writetimeout: 10ms
 notifications:
+    events:
+        manifestlayers: true
     endpoints:
         - name: local-5003
           url: http://localhost:5003/callback
