Use references terminology instead of layers.
Signed-off-by: Andrew Leung <anwleung@gmail.com>

--- a/cmd/registry/config-cache.yml
+++ b/cmd/registry/config-cache.yml
@@ -30,7 +30,7 @@ redis:
   writetimeout: 10ms
 notifications:
     events:
-        manifestlayers: true
+        includereferences: true
     endpoints:
         - name: local-8082
           url: http://localhost:5003/callback
