feat(storage-cos): cos driver support

--- a/vendor.conf
+++ b/vendor.conf
@@ -8,6 +8,7 @@ github.com/bugsnag/bugsnag-go b1d153021fcd90ca3f080db36bec96dc690fb274
 github.com/bugsnag/osext 0dd3f918b21bec95ace9dc86c7e70266cfc5c702
 github.com/bugsnag/panicwrap e2c28503fcd0675329da73bf48b33404db873782
 github.com/denverdino/aliyungo a747050bb1baf06cdd65de7cddc281a2b1c2fde5
+github.com/Coding/cos-go-sdk-v5 6b68e9421ecfd2ebb4084b9bcf35f5ce6ad5754d
 github.com/dgrijalva/jwt-go a601269ab70c205d26370c16f7c81e9017c14e04
 github.com/docker/go-metrics 399ea8c73916000c64c2c76e8da00ca82f8387ab
 github.com/docker/libtrust fa567046d9b14f6aa788882a950d69651d230b21
@@ -52,3 +53,5 @@ github.com/opencontainers/go-digest a6d0ee40d4207ea02364bd3b9e8e77b9159ba1eb
 github.com/opencontainers/image-spec ab7389ef9f50030c9b245bc16b981c7ddf192882
 golang.org/x/sys a5b02f93d862f065920dd6a40dddc66b60d0dec4 https://github.com/golang/sys.git
 google.golang.org/genproto b515fa19cec88c32f305a962f34ae60068947aea https://github.com/google/go-genproto.git
+github.com/google/go-querystring c8c88dbee036db4e4808d1f2ec8c2e15e11c3f80
+github.com/mozillazg/go-httpheader 61f2392c3317b60616c9dcb10d0a4cfef131fe62
