--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -1,6 +1,6 @@
 FROM openshift/origin-release:golang-1.13 AS builder
 ENV DISTRIBUTION_DIR /go/src/github.com/docker/distribution
-ENV DOCKER_BUILDTAGS include_oss include_gcs
+ENV BUILDTAGS include_oss include_gcs
 ARG GOOS=linux
 ARG GOARCH=amd64
 ARG GOARM=6
