Client state strategy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
         "statusBar.border": "#663399",
         "titleBar.border": "#663399"
     },
-    "peacock.remoteColor": "#663399"
+    "peacock.remoteColor": "#663399",
+    "python.pythonPath": "/usr/bin/python3"
 }
