enable ci for release/2.7
Signed-off-by: Wang Yan <wangyan@vmware.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,7 @@ name: CI
 
 on:
   push:
-    branches:
-    - main
   pull_request:
-    branches:
-    - main
 
 jobs:
 
@@ -34,7 +30,7 @@ jobs:
     - name: Dependencies
       run: |
           sudo apt-get -q update
-          sudo -E apt-get -yq --no-install-suggests --no-install-recommends install python-minimal
+          sudo -E apt-get -yq --no-install-suggests --no-install-recommends install python2-minimal
           cd /tmp && go get -u github.com/vbatts/git-validation
 
     - name: Build
