use memory as the cache in test
Fixes #3446

Signed-off-by: Wang Yan <wangyan@vmware.com>

--- a/cmd/registry/config-dev.yml
+++ b/cmd/registry/config-dev.yml
@@ -22,7 +22,7 @@ storage:
     delete:
       enabled: true
     cache:
-        blobdescriptor: redis
+        blobdescriptor: inmemory
     filesystem:
         rootdirectory: /var/lib/registry
     maintenance:
