--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,11 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: ["1.15.x", "1.16.x"]
+        platform: ["ubuntu-latest"]
+    runs-on: ${{ matrix.platform }}
     env:
       DOCKER_BUILDTAGS: "include_oss include_gcs"
       CGO_ENABLED: 1
@@ -30,7 +34,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15.*
+        go-version: ${{ matrix.go-version }}
 
     - name: Dependencies
       run: |
