--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         platform: ["ubuntu-latest"]
     runs-on: ${{ matrix.platform }}
     env:
-      DOCKER_BUILDTAGS: "include_oss include_gcs"
+      DOCKER_BUILDTAGS: "include_oss include_gcs include_bos"
       CGO_ENABLED: 1
       GO111MODULE: "auto"
       GOPATH: ${{ github.workspace }}
