gha: also run tests
For some reason, travis was running 'check' (linting), and 'build', but
none of the test targets were run.

This patch adds the test targets to the github actions workflow.

Signed-off-by: Sebastiaan van Stijn <github@gone.nl>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,9 @@ jobs:
         script/validate/vendor
         go build -i .
         make check
+        make test-full
+        make test-race
+        make integration
         make build
         make binaries
         if [ "$GOOS" = "linux" ]; then make coverage ; fi
