ci: upload conformance test results
Signed-off-by: CrazyMax <crazy-max@users.noreply.github.com>

--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -37,3 +37,13 @@ jobs:
           OCI_TEST_CONTENT_DISCOVERY: 1
           OCI_TEST_CONTENT_MANAGEMENT: 1
           OCI_HIDE_SKIPPED_WORKFLOWS: 1
+      -
+        name: Move test results
+        run: mkdir -p .out/ && mv {report.html,junit.xml} .out/
+      -
+        name: Upload test results
+        uses: actions/upload-artifact@v2
+        with:
+          name: oci-test-results-${{ github.sha }}
+          path: .out/
+          if-no-files-found: error
