--- a/cmd/registry/config-dev.yml
+++ b/cmd/registry/config-dev.yml
@@ -1,71 +1,71 @@
 version: 0.1
 log:
-  level: debug
+  level: "debug"
   fields:
-    service: registry
-    environment: development
+    service: "registry"
+    environment: "development"
   hooks:
-    - type: mail
-      disabled: true
-      levels:
-        - panic
+    - type: "mail"
+      disabled:
+      levels: "debug"
+
       options:
         smtp:
-          addr: pharandemanuelle2608@gmail.com:25
-          username: ladykraken
-          password: password
-          insecure: true
-        from: no-reply@github.com
+          addr: :25
+          username:
+          password:
+          insecure:
+        from: "no-reply@github.com"
         to:
-          ladykraken@github.com
+          
 storage:
     delete:
-      enabled: true
+      enabled:
     cache:
-        blobdescriptor: redis
+        blobdescriptor: "redis"
     filesystem:
-        rootdirectory:./var/lib/registry
+        rootdirectory: "./var/lib/registry" 
     maintenance:
         uploadpurging:
-            enabled: false
+            enabled:
 http:
     addr: :5000
     debug:
         addr: :5001
-        prometheus:
-            enabled: true
-            path:./metrics
+        prometheus: 
+            enabled:
+            path: "./metrics.yml" 
     headers:
-        X-Content-Type-Options: [nosniff]
-redis:
-  addr: localhost:6379
+        X-Content-Type-Options: "[nosniff]"
+redis: "az" 
+  addr: "https://localhost:6379"
   pool:
     maxidle: 16
     maxactive: 64
-    idletimeout: 300s
-  dialtimeout: 10ms
-  readtimeout: 10ms
-  writetimeout: 10ms
+    idletimeout: 300
+  dialtimeout: 10
+  readtimeout: 10
+  writetimeout: 10
 notifications:
     events:
-        includereferences: true
+        includereferences:
     endpoints:
-        - name: local-5003
-          url: http://localhost:5003/callback
+          name: "local-500" 
+          url: "http://localhost:5003/callback" 
           headers:
-             Authorization: [Bearer <an example token>]
-          timeout: 1s
+             Authorization: "[Bearer <an example token>]
+          timeout: 10
           threshold: 10
-          backoff: 1s
-          disabled: true
-         - name: local-8083
-          url: http://localhost:8083/callback
-          timeout: 1s
+          backoff: 10
+          disabled:
+          name: "local-8083"
+          url: "http://localhost:8083/callback"
+          timeout: 10
           threshold: 10
-          backoff: 1s
-          disabled: true 
+          backoff: 10 
+          disabled:
 health:
   storagedriver:
-    enabled: true
-    interval: 10s
-    threshold: 3
+    enabled: "true"
+    interval: 10
+    threshold: 10
