ci: git validation target
Signed-off-by: CrazyMax <crazy-max@users.noreply.github.com>

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -8,8 +8,6 @@ on:
     tags:
       - 'v*'
   pull_request:
-    branches:
-      - '*'
 
 jobs:
   validate:
@@ -20,11 +18,14 @@ jobs:
         target:
           - lint
           - validate-vendor
+          - validate-git
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       -
         name: Run
         run: |
           make ${{ matrix.target }}
+        env:
+          COMMIT_RANGE: ${{ format('{0}..{1}', github.sha, 'HEAD') }}
