feature: config proxy cache ttl
Signed-off-by: rongfu.leng <1275177125@qq.com>

--- a/cmd/registry/config-cache.yml
+++ b/cmd/registry/config-cache.yml
@@ -50,6 +50,7 @@ proxy:
   remoteurl: https://registry-1.docker.io
   username: username
   password: password
+  cacheTTL: 48h
 health:
   storagedriver:
     enabled: true
