build: harden e2e.yml permissions
Signed-off-by: Alex <aleksandrosansan@gmail.com>

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read # to fetch code (actions/checkout)
+
 jobs:
   run-e2e-test:
     runs-on: ubuntu-latest
