ci: update github actions
Signed-off-by: CrazyMax <crazy-max@users.noreply.github.com>

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -3,10 +3,9 @@ name: e2e
 on:
   push:
     branches:
-      - main
+      - 'main'
+      - 'release/*'
   pull_request:
-    branches:
-      - main
 
 jobs:
   run-e2e-test:
@@ -14,12 +13,12 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       -
         name: Build image
-        uses: docker/bake-action@v1
+        uses: docker/bake-action@v2
         with:
           targets: image-local
       -
