ci: add concurrency check
Signed-off-by: CrazyMax <crazy-max@users.noreply.github.com>

--- a/.github/workflows/fossa.yml
+++ b/.github/workflows/fossa.yml
@@ -1,5 +1,9 @@
 name: FOSSA License Scanning
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   - pull_request
   - push
