--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17.*
+        go-version: 1.18.8
 
     - name: Dependencies
       run: |
@@ -39,7 +39,7 @@ jobs:
         DCO_VERBOSITY=-q script/validate/dco
         GO111MODULE=on script/setup/install-dev-tools
         script/validate/vendor
-        go build -i .
+        go build .
         make check
         make build
         make binaries
