Add missing dep
Signed-off-by: Alex Lavallee <73203142+lavalleeale@users.noreply.github.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -35,6 +35,7 @@ github.com/yvasiyarov/gorelic a9bba5b9ab508a086f9a12b8c51fab68478e2128
 github.com/yvasiyarov/newrelic_platform_go b21fdbd4370f3717f3bbd2bf41c223bc273068e6
 golang.org/x/crypto 8e447d8cc585b0089d1938b8747264783295e65f
 golang.org/x/net daac0cec0cf964a628a29bb4b82940c225b921ed
+golang.org/x/text 3a7a2557e7386e7e39d8b31290c3e8962c39e0fc
 golang.org/x/oauth2 045497edb6234273d67dbc25da3f2ddbc4c4cacf
 google.golang.org/api 9bf6e6e569ff057f75d9604a46c52928f17d2b54
 google.golang.org/appengine 12d5545dc1cfa6047a286d5e853841b6471f4c19
