[release/2.8] vendor: github.com/opencontainers/go-digest v1.0.0
full diff: https://github.com/opencontainers/go-digest/compare/a6d0ee40d4207ea02364bd3b9e8e77b9159ba1eb...v1.0.0

This is similar to the same changes on main:

- bf56f348be647ad19c8204b18f0146be40db53dc (update to v1.0.0-rc1)
- 8a8d91529d05e9ce9d1af4e99008c48c25712ad6 (update to v1.0.0)

Signed-off-by: Sebastiaan van Stijn <github@gone.nl>

--- a/vendor.conf
+++ b/vendor.conf
@@ -48,5 +48,5 @@ gopkg.in/check.v1 64131543e7896d5bcc6bd5a76287eb75ea96c673
 gopkg.in/square/go-jose.v1 40d457b439244b546f023d056628e5184136899b
 gopkg.in/yaml.v2 v2.2.1
 rsc.io/letsencrypt e770c10b0f1a64775ae91d240407ce00d1a5bdeb https://github.com/dmcgowan/letsencrypt.git
-github.com/opencontainers/go-digest a6d0ee40d4207ea02364bd3b9e8e77b9159ba1eb
+github.com/opencontainers/go-digest ea51bea511f75cfa3ef6098cc253c5c3609b037a # v1.0.0
 github.com/opencontainers/image-spec 67d2d5658fe0476ab9bf414cec164077ebff3920 # v1.0.2
