Move dockerhub-readme workflow to the correct path
We've incorrectly added the dockerhub-readme workflow into .github
path from where it can not be triggered:

https://docs.github.com/en/actions/using-workflows/triggering-a-workflow

This commit addresses it and update the workflow paths.

Signed-off-by: Milos Gajdos <milosthegajdos@gmail.com>

--- a/.github/workflows/dockerhub-readme.yml
+++ b/.github/workflows/dockerhub-readme.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - 'main'
     paths:
-      - '.github/dockerhub-readme.yml'
+      - '.github/workflows/dockerhub-readme.yml'
       - 'docs/dockerhub.md'
 
 env:
