ci: add cloud storage driver integration tests to CI
* include storage integration tests in the build matrix
* add a new CI job that runs E2E tests backed by S3 storage driver

Signed-off-by: Milos Gajdos <milosthegajdos@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,9 @@ jobs:
         go:
           - 1.20.10
           - 1.21.3
+        target:
+          - test-coverage
+          - test-cloud-storage
     steps:
       -
         name: Checkout
@@ -40,7 +43,7 @@ jobs:
       -
         name: Test
         run: |
-          make coverage
+          make ${{ matrix.target }}
       -
         name: Codecov
         uses: codecov/codecov-action@v3
