--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -31,12 +31,26 @@ jobs:
       -
         name: Start distribution server
         run: |
-          IP=`hostname -I | awk '{print $1}'`
-          echo "IP=$IP" >> $GITHUB_ENV
-          echo '{"insecure-registries" : ["'$IP':5000"]}' | sudo tee /etc/docker/daemon.json
-          sudo service docker restart
           docker run --rm -p 5000:5000 -p 5001:5001 -idt "registry:local"
       -
         name: Tests
         run: |
-          bash ./tests/push.sh $IP
+          bash ./tests/push.sh 127.0.0.0
+
+  run-e2e-test-s3-storage:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      -
+        name: Start E2E environment
+        run: |
+          make start-e2e-s3-env
+
+      - name: Tests
+        run: |
+          bash ./tests/push.sh 127.0.0.0
+          make stop-e2e-s3-env
