--- a/docs/hugo.yaml
+++ b/docs/hugo.yaml
@@ -3,6 +3,11 @@ languageCode: en-us
 title: CNCF Distribution
 theme: hugo-geekdoc
 
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
+
 pluralizeListTitles: false
 enableRobotsTXT: true
 taxonomies: [tags]
