refactor: complete refactoring of cache providers and cache config
This commit reworks cache provider setup and configuration.
Cache now has a dedicated configuration structure instead of
being part of the storage configuration. This simplifies the
code quite a bit at the expense of sad configuration decoding.

This commit now allows for adding of new cache providers should there be
such need in the future. Currently we continue to provide only redis and
inmemory cache.

In line with this the existing cache implementation: inmemory and redis
have now been "turned" into cache providers which also simplifies the code.

Cache configuration is now expected to be set the following options:
provider - name of the cache provider
params - arbitrary set of config params for the given cache provider.

Each cache provider must register itself via init func so it's loaded
on startup and available if the config requires it.

Redis configuration has been removed from the main configuration because
its only ever been used for configuring caches and nothing else so it
makes no sense to keep it in the global config.

Documentation has been updated accordingly.

Signed-off-by: Milos Gajdos <milosthegajdos@gmail.com>

--- a/cmd/registry/config-dev.yml
+++ b/cmd/registry/config-dev.yml
@@ -7,13 +7,14 @@ log:
 storage:
     delete:
       enabled: true
-    cache:
-        blobdescriptor: inmemory
     filesystem:
         rootdirectory: /var/lib/registry
     maintenance:
         uploadpurging:
             enabled: false
+cache:
+    blobdescriptor:
+      provider: inmemory
 http:
     addr: :5000
     debug:
