--- a/tests/conf-e2e-cloud-storage.yml
+++ b/tests/conf-e2e-cloud-storage.yml
@@ -16,21 +16,9 @@ log:
       service: registry
     formatter: text
     level: debug
-redis:
-   addr: redis:6379
-   db: 0
-   dialtimeout: 5s
-   readtimeout: 10ms
-   writetimeout: 10ms
-   pool:
-     idletimeout: 60s
-     maxactive: 64
-     maxidle: 16
 storage:
   redirect:
     disable: true
-  cache:
-    blobdescriptor: redis
   maintenance:
     uploadpurging:
       enabled: false
@@ -46,3 +34,16 @@ storage:
     chunksize: 33554432
     secure: true
     v4auth: true
+cache:
+  blobdescriptor:
+    provider: redis
+    params:
+       addr: redis:6379
+       db: 0
+       dialtimeout: 5s
+       readtimeout: 10ms
+       writetimeout: 10ms
+       pool:
+         idletimeout: 60s
+         maxactive: 64
+         maxidle: 16
