--- a/cmd/registry/config-cache.yml
+++ b/cmd/registry/config-cache.yml
@@ -5,13 +5,23 @@ log:
     service: registry
     environment: development
 storage:
-    cache:
-        blobdescriptor: redis
     filesystem:
         rootdirectory: /var/lib/registry-cache
     maintenance:
         uploadpurging:
             enabled: false
+cache:
+    blobdescriptor:
+      provider: redis
+      params:
+        addr: localhost:6379
+        pool:
+          maxidle: 16
+          maxactive: 64
+          idletimeout: 300s
+        dialtimeout: 10ms
+        readtimeout: 10ms
+        writetimeout: 10ms
 http:
     addr: :5000
     secret: asecretforlocaldevelopment
@@ -19,15 +29,6 @@ http:
         addr: localhost:5001
     headers:
         X-Content-Type-Options: [nosniff]
-redis:
-  addr: localhost:6379
-  pool:
-    maxidle: 16
-    maxactive: 64
-    idletimeout: 300s
-  dialtimeout: 10ms
-  readtimeout: 10ms
-  writetimeout: 10ms
 notifications:
     events:
         includereferences: true
