--- a/tests/conf-e2e-cloud-storage.yml
+++ b/tests/conf-e2e-cloud-storage.yml
@@ -41,6 +41,7 @@ storage:
     bucket: images-local
     rootdirectory: /registry-v2
     regionendpoint: http://minio:9000
+    forcepathstyle: true
     encrypt: false
     secure: false
     chunksize: 33554432
