feat: add new release automation
Signed-off-by: David van der Spek <vanderspek.david@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,14 +8,10 @@ on:
   push:
     branches:
       - 'main'
-      - 'release/*'
-    tags:
-      - 'v*'
   pull_request:
 
 env:
-  DOCKERHUB_SLUG: distribution/distribution
-  GHCR_SLUG: ghcr.io/${{ github.repository }}
+  GHCR_SLUG: ghcr.io/${{ github.repository }}/distribution
 
 permissions:
   contents: read # to fetch code (actions/checkout)
@@ -53,8 +49,8 @@ jobs:
 
   build:
     permissions:
-      contents: write # to create GitHub release (softprops/action-gh-release)
-      packages: write # so we can push the image to GHCR
+      id-token: write # to write to GHCR
+      packages: write # to write to GHCR
 
     runs-on: ubuntu-latest
     needs:
@@ -71,23 +67,16 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ env.DOCKERHUB_SLUG }}
             ${{ env.GHCR_SLUG }}
-          ### versioning strategy
-          ### push semver tag v3.2.1 on main (default branch)
-          # distribution/distribution:3.2.1
-          # distribution/distribution:3.2
-          # distribution/distribution:3
-          # distribution/distribution:latest
-          ### push semver prelease tag v3.0.0-beta.1 on main (default branch)
-          # distribution/distribution:3.0.0-beta.1
-          ### push on main
-          # distribution/distribution:edge
+          ### push on PRs and main
+          # ghcr.io/distribution/distribution:pr<number>
+          # ghcr.io/distribution/distribution:sha<sha>
+          # ghcr.io/distribution/distribution:main
+          # ghcr.io/distribution/distribution:edge
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
             type=ref,event=pr
+            type=ref,event=branch
+            type=sha
             type=edge
           labels: |
             org.opencontainers.image.title=Distribution
@@ -96,19 +85,11 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       -
-        name: Login to DockerHub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Log in to GitHub Container registry
-        if: github.event_name != 'pull_request'
+        name: Login to GitHub Container registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build artifacts
@@ -146,16 +127,4 @@ jobs:
             ./docker-bake.hcl
             ${{ steps.meta.outputs.bake-file }}
           targets: image-all
-          push: ${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
-      -
-        name: GitHub Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          draft: true
-          files: |
-            bin/*.tar.gz
-            bin/*.provenance.json
-            bin/*.sha256
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          push: true
