--- a/.releaserc
+++ b/.releaserc
@@ -1,8 +1,11 @@
 {
   "branches": [
     "main",
+    "+([0-9])?(.{+([0-9]),x}).x",
     "next",
-    '+([0-9])?(.{+([0-9]),x}).x',
+    { name: "alpha", prerelease: true },
+    { name: "beta", prerelease: true },
+    { name: "rc", prerelease: true },
   ],
   "plugins": [
     [
