ci: disable provenance in docker bake
Signed-off-by: David van der Spek <vanderspek.david@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,6 +96,7 @@ jobs:
         uses: docker/bake-action@v4
         with:
           targets: artifact-all
+          provenance: false
       -
         name: Rename provenance
         run: |
