fix: allow setting artifact version from release
Signed-off-by: David van der Spek <vanderspek.david@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,6 +100,7 @@ jobs:
       - name: Build artifacts
         uses: docker/bake-action@v4
         with:
+          set: artifact.args.RELEASE_VERSION=v${{ steps.semantic_release.outputs.new_release_version }}
           targets: artifact-all
           provenance: false
       - name: Move artifacts
