ci: fix ghcr slug
Signed-off-by: David van der Spek <vanderspek.david@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
 
 env:
-  GHCR_SLUG: ghcr.io/${{ github.repository }}/distribution
+  GHCR_SLUG: ghcr.io/${{ github.repository }}
 
 permissions:
   contents: read # to fetch code (actions/checkout)
