[WIP] Support to cache multiple remote registries
This is a PoC code for `distribution` support to cache multiple
remote registries

Signed-off-by: JeffYang <jeffyang512@163.com>

--- a/cmd/registry/config-cache.yml
+++ b/cmd/registry/config-cache.yml
@@ -51,6 +51,10 @@ proxy:
   remoteurl: https://registry-1.docker.io
   username: username
   password: password
+  remotehostquerykey: ns
+  remotehostconfigmap:
+    registry.k8s.io:
+      remoteurl: https://registry.k8s.io
 health:
   storagedriver:
     enabled: true
